[package]
name = "hissrv"
version = "0.2.0"
edition = "2021"
authors = ["Evan Liu <Evan.Liu@voltageenergy.com>"]
description = "Simple Redis to InfluxDB 3.2 data transfer service"

[dependencies]
# Internal dependencies
voltage-common = { workspace = true, features = ["async"] }

# Core dependencies
tokio = { workspace = true, features = ["full"] }
futures-util = "0.3"
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true, features = ["serde"] }

# HTTP client for InfluxDB 3.2
reqwest = { workspace = true, features = ["json"] }

# Web framework (simple API)
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace"] }

# Configuration
figment = { version = "0.10", features = ["yaml", "env"] }

# Redis
redis = { workspace = true, features = ["tokio-comp", "connection-manager"] }

# Utilities
urlencoding = "2.1"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
axum-test = "17.1"