[package]
name = "hissrv-rust"
version = "0.1.0"
edition = "2021"
authors = ["Evan Liu <Evan.Liu@voltageenergy.com>"]
description = "Redis to InfluxDB data transfer service"

[dependencies]
# Internal dependencies
voltage-libs = { path = "../../libs", features = ["redis", "influxdb"] }

# External dependencies
redis = { version = "0.29", features = ["tokio-comp"], default-features = false } # Only for PubSub types
tokio = { workspace = true }
futures-util = "0.3"
clap = { version = "4.1.8", features = ["derive"] }
regex = "1.7.1"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "0.2"
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
uuid = { workspace = true }
dashmap = "5.4"
async-trait = { workspace = true }
utoipa = { version = "5.4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
base64 = "0.21"
reqwest = { workspace = true }
prometheus = "0.13"
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
futures = "0.3"
tokio-stream = "0.1"
figment = { version = "0.10", features = ["toml", "yaml", "env"] }

[dev-dependencies]
# 测试依赖
rand = "0.8"
tempfile = "3.8"
wiremock = "0.5"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
proptest = "1.4"
test-log = "0.2"
env_logger = "0.11"

[features]
default = []
integration-tests = []
performance-tests = []

[[bench]]
name = "batch_writer_bench"
harness = false

[[bench]]
name = "query_optimizer_bench"
harness = false