[package]
name = "hissrv"
version = "0.3.0"
edition = "2021"
authors = ["Evan Liu <Evan.Liu@voltageenergy.com>"]
description = "Simple Redis to InfluxDB data bridge service"

[dependencies]
# Internal dependencies
voltage-libs = { path = "../../libs", features = ["redis", "influxdb"] }

# External dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
figment = { version = "0.10", features = ["yaml", "env"] }
anyhow = { workspace = true }
chrono = { workspace = true }
redis = { version = "0.29", features = ["tokio-comp"] }
futures-util = "0.3"

[features]
default = []