[package]
name = "alarmsrv"
version = "0.1.0"
edition = "2021"
authors = ["Voltage EMS Team"]
description = "Basic alarm service for Voltage EMS"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Redis
redis = { version = "0.24", features = ["tokio-comp"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"

# Configuration
config = "0.14"
voltage-config = { path = "../config-framework" }

# Utilities
futures = "0.3" 