[package]
name = "alarmsrv"
version = "0.1.0"
edition = "2021"
authors = ["Voltage EMS Team"]
description = "Basic alarm service for Voltage EMS"

[dependencies]
# Async runtime
tokio = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Internal dependencies
voltage-common = { workspace = true, features = ["async"] }

# Redis - only for PubSub types
redis = { workspace = true }

# Time handling
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Configuration
config = { workspace = true }

# Utilities
futures = { workspace = true } 