[package]
name = "apigateway"
version = "0.1.0"
edition = "2021"

[dependencies]
# Local dependencies
voltage-libs = { path = "../../libs", features = ["redis"] }

# Web framework
actix-web = "4"
actix-cors = "0.6"
actix-web-httpauth = "0.8"
actix-web-actors = "4.2"
actix = "0.13"

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }
tokio-stream = "0.1"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utils (re-exported from voltage-common)
uuid = { workspace = true }
chrono = { workspace = true }
once_cell = "1"
tracing = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Authentication
jsonwebtoken = "9"

# Configuration
config = { workspace = true }

# Logging (will be migrated to voltage-common logging)
env_logger = "0.10"
log = "0.4"

[dev-dependencies]
actix-rt = "2"