[package]
name = "apigateway"
version = "0.1.0"
edition = "2021"

[dependencies]
# Local dependencies
voltage-libs = { path = "../../libs", features = ["redis"] }

# Web framework
axum = { workspace = true, features = ["ws"] }
tower = { workspace = true }
tower-http = { version = "0.5", features = ["cors", "trace", "auth"] }
tower-layer = "0.3"
tower-service = "0.3"
http = "1"
http-body-util = "0.1"
bytes = "1.9"

# WebSocket support
tokio-tungstenite = "0.21"
tungstenite = "0.21"

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }
tokio-stream = "0.1"
futures-util = "0.3"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utils (re-exported from voltage-common)
uuid = { workspace = true }
chrono = { workspace = true }
once_cell = "1"
tracing = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# InfluxDB client
influxdb = "0.7"

# Authentication
jsonwebtoken = "9"

# Configuration
config = { workspace = true }

# Async traits and error handling
async-trait = "0.1"
thiserror = "1.0"

# Logging (will be migrated to voltage-common logging)
env_logger = "0.10"
log = "0.4"

# Random number generation
rand = "0.8"

[dev-dependencies]
anyhow = "1"
sysinfo = "0.30"