[package]
name = "apigateway"
version = "0.0.1"
edition = "2021"

[dependencies]
# Local dependencies
voltage-libs = { path = "../../libs", features = ["redis"] }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { version = "0.5", features = ["cors"] }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utils
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
thiserror = "1.0"