[package]
name = "comsrv"
version = "0.0.1"
edition = "2021"
license.workspace = true

[lib]
name = "comsrv"
path = "src/lib.rs"

[[bin]]
name = "comsrv"
path = "src/main.rs"

[dependencies]
# Local dependencies
common = { path = "../../libs/common", default-features = false, features = ["redis", "sqlite"] }
voltage-comlink = { path = "../../libs/voltage-comlink" }
voltage-config = { path = "../../libs/voltage-config", features = ["axum-support", "openapi"] }
voltage-rtdb = { path = "../../libs/voltage-rtdb" }

# Core async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Logging (will migrate to voltage-common)
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

# Serialization
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
csv = { workspace = true }

# Error handling (will migrate to voltage-common)
thiserror = { workspace = true }
anyhow = { workspace = true }

# Industrial communication
tokio-serial = { workspace = true }

# Web framework
axum = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true, optional = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Data structures
dashmap = { workspace = true }
ahash = { workspace = true }
bytes = { workspace = true }
# prometheus = { workspace = true }  # Temporarily disabled for MUSL cross-compilation

# Utils
chrono = { workspace = true }
clap = { workspace = true }
rand = { workspace = true }

# Configuration (will migrate to voltage-common)
figment = { workspace = true }

# SQLite for configuration
sqlx = { workspace = true }

# WebSocket and UUID dependencies removed - not currently used

# Industrial GPIO and hardware interfaces
i2cdev = { version = "0.6", optional = true } # I2C device support
spidev = { version = "0.6", optional = true } # SPI device support

# CAN bus support (DBC parsing is platform-independent)
can-dbc = { version = "4.0", optional = true } # DBC file parsing

# Platform-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
rppal = { version = "0.17", optional = true } # Raspberry Pi GPIO (Linux only)
socketcan = { version = "3.3", optional = true } # SocketCAN interface (Linux only)

[dev-dependencies]
tracing-test = { workspace = true }
reqwest = { workspace = true }
tempfile = { workspace = true }
tower = { workspace = true }
modsrv = { path = "../modsrv" }
http-body-util = "0.1"
redis = { workspace = true }  # For integration tests only

[features]
default = ["modbus", "can", "swagger-ui"]
modbus = []
can = ["can-dbc"]                    # CAN bus protocol support
can-linux = ["can", "socketcan"]     # Full CAN support on Linux
gpio = ["rppal"]                     # GPIO support for embedded systems (Raspberry Pi)
industrial-io = ["i2cdev", "spidev"] # Industrial I/O support
swagger-ui = ["utoipa-swagger-ui"]   # Swagger UI documentation (enabled by default for development)
integration = []                     # Integration tests requiring real Redis and voltage.db

[lints.clippy]
cast-possible-truncation = "allow" # e.g., u64 as u32 when safe
cast-possible-wrap = "allow"       # e.g., u64 as i64 for timestamps
cast-sign-loss = "allow"           # e.g., i64 as u64 when non-negative
