[package]
name = "comsrv"
version = "0.1.0"
edition = "2021"
license.workspace = true

[lib]
name = "comsrv"
path = "src/lib.rs"

[[bin]]
name = "comsrv"
path = "src/main.rs"

[dependencies]
# Local dependencies
common = { path = "../../libs/common", default-features = false, features = ["redis", "sqlite", "axum", "openapi"] }

# IGW - Industrial Gateway Protocol Library
igw = { version = "0.2", default-features = false, features = ["virtual-channel", "modbus", "modbus-rtu"] }
errors = { path = "../../libs/errors", features = ["axum-support"] }
# voltage-comlink removed - types moved to core/channels/types.rs
voltage-model = { path = "../../libs/voltage-model" }
# voltage-protocols removed - all protocols now use igw
voltage-routing = { path = "../../libs/voltage-routing" }
voltage-rtdb = { path = "../../libs/voltage-rtdb" }
voltage-schema-macro = { path = "../../libs/voltage-schema-macro" }

# Modbus library (for error conversion)
voltage_modbus = { workspace = true }

# Core async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Logging (will migrate to voltage-common)
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

# Serialization
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
csv = { workspace = true }

# Error handling (will migrate to voltage-common)
thiserror = { workspace = true }
anyhow = { workspace = true }

# Industrial communication
tokio-serial = { workspace = true }

# Web framework
axum = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true, optional = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Data structures
dashmap = { workspace = true }
ahash = { workspace = true }
bytes = { workspace = true }

# Utils
chrono = { workspace = true }
clap = { workspace = true }
rand = { workspace = true }

# Configuration (will migrate to voltage-common)
figment = { workspace = true }

# SQLite for configuration
sqlx = { workspace = true }

# WebSocket and UUID dependencies removed - not currently used

# Industrial GPIO and hardware interfaces - removed (i2cdev, spidev, rppal)
# These can be re-added when hardware support is implemented

[dev-dependencies]
tracing-test = { workspace = true }
reqwest = { workspace = true }
tempfile = { workspace = true }
tower = { workspace = true }
modsrv = { path = "../modsrv" }
http-body-util = "0.1"
redis = { workspace = true }  # For integration tests only

[features]
default = ["modbus", "swagger-ui", "openapi"]
modbus = []
# gpio and industrial-io features removed - hardware dependencies not yet implemented
swagger-ui = ["utoipa-swagger-ui"]   # Swagger UI documentation (enabled by default for development)
openapi = []                         # OpenAPI schema generation for types
integration = []                     # Integration tests requiring real Redis and voltage.db

[lints.clippy]
cast-possible-truncation = "allow" # e.g., u64 as u32 when safe
cast-possible-wrap = "allow"       # e.g., u64 as i64 for timestamps
cast-sign-loss = "allow"           # e.g., i64 as u64 when non-negative
