[package]
name = "voltage-config-cli"
version = "0.1.0"
edition = "2021"
authors = ["VoltageEMS Team"]
description = "Configuration management CLI for VoltageEMS services"
license = "MIT OR Apache-2.0"

[[bin]]
name = "voltage-config"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.4", features = ["derive", "env"] }
clap_complete = "4.4"

# Configuration framework
voltage-config = { path = "../config-framework" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Console output
console = "0.15"
indicatif = "0.17"
colored = "2.1"
tabled = "0.15"

# File handling
walkdir = "2.4"
similar = "2.4"

# Environment
dotenv = "0.15"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"