[package]
name = "voltage-config"
version = "0.1.0"
edition = "2021"
authors = ["VoltageEMS Team"]
license = "MIT OR Apache-2.0"
description = "Shared configuration framework for VoltageEMS services"
repository = "https://github.com/VoltageEMS/voltage-config"
keywords = ["configuration", "config", "settings", "microservices"]
categories = ["config"]

[dependencies]
figment = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
validator = { version = "0.18", features = ["derive"] }
regex = "1.10"
glob = "0.3"
walkdir = "2.4"
sqlx = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }
tracing-subscriber = "0.3"