[package]
name = "hissrv"
version = "0.0.1"
edition = "2021"
authors = ["Evan Liu <Evan.Liu@voltageenergy.com>"]
description = "Minimalist Redis to InfluxDB data bridge service for edge devices"

[lib]
name = "hissrv"
path = "src/lib.rs"

[[bin]]
name = "hissrv"
path = "src/main.rs"

[dependencies]
# Internal dependencies
voltage-libs = { path = "../../libs", features = ["redis", "influxdb"] }

# Core dependencies
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Configuration
figment = { version = "0.10", features = ["yaml", "env"] }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
humantime-serde = "1.1"

# Data handling
redis = { version = "0.29", features = ["tokio-comp"] }
chrono = { workspace = true }

# Web framework for API
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }

[features]
default = []

[dev-dependencies]
tokio-test = "0.4"
