[package]
name = "modsrv"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@voltageenergy.com>"]
description = "Real-time model execution service"

[dependencies]
# Local dependencies
voltage-libs = { path = "../../libs", features = ["redis"] }

# Core dependencies (use voltage-common where possible)
tokio = { workspace = true }
redis = { workspace = true }
futures-util = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
clap = { version = "4.0", features = ["derive"] }
reqwest = { workspace = true }
dotenv = "0.15"
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
regex = "1.10.2"
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
petgraph = "0.6.4"
rand = "0.8.5"
base64 = "0.22"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
futures = { workspace = true }

[features]
default = []