[package]
name = "modsrv"
version = "0.0.1"
edition = "2021"
authors = ["Your Name <your.email@voltageenergy.com>"]
description = "Real-time model execution service"

[[bin]]
name = "modsrv"
path = "src/main.rs"

[dependencies]
# Local dependencies
voltage-libs = { path = "../../libs", features = ["redis"] }

# Core dependencies (use voltage-common where possible)
tokio = { workspace = true }
redis = { workspace = true }
futures-util = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
clap = { version = "4.0", features = ["derive"] }
reqwest = { workspace = true }
dotenv = "0.15"
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
regex = "1.10.2"
axum = { workspace = true }
utoipa = { version = "5.4", features = ["axum_extras"] }
# utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
tower = { workspace = true }
tower-http = { workspace = true }
petgraph = "0.6.4"
rand = "0.8.5"
base64 = "0.22"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
futures = { workspace = true }
tempfile = "3.2"
warp = "0.3"

[features]
default = ["redis"]
redis = []


