[package]
name = "modsrv"
version = "0.1.0"
edition = "2021"
license.workspace = true
authors = ["Your Name <your.email@voltageenergy.com>"]
description = "Real-time model execution service"

[lib]
name = "modsrv"
path = "src/lib.rs"

[[bin]]
name = "modsrv"
path = "src/main.rs"
test = false

[dependencies]
# Local dependencies
common = { path = "../../libs/common", default-features = false, features = ["redis", "sqlite", "axum"] }
errors = { path = "../../libs/errors", features = ["axum-support"] }
voltage-model = { path = "../../libs/voltage-model" }
voltage-schema-macro = { path = "../../libs/voltage-schema-macro" }
voltage-rtdb = { path = "../../libs/voltage-rtdb" }
voltage-routing = { path = "../../libs/voltage-routing" }
voltage-rules = { path = "../../libs/voltage-rules" }

# Core dependencies (use voltage-common where possible)
tokio = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
bytes = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
axum = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true, optional = true }
tokio-util = { workspace = true }
sqlx = { workspace = true }
csv = { workspace = true }  # For loading product CSV files
cron = { workspace = true }  # For time series scheduling
evalexpr = { workspace = true }  # For expression evaluation
dashmap = { workspace = true }  # For high-performance concurrent name→id cache

[dev-dependencies]
criterion = { workspace = true }
futures = { workspace = true }
tempfile = { workspace = true }
tower = { workspace = true }
http-body-util = "0.1"

[features]
default = ["redis", "sqlite", "swagger-ui"]
redis = []
sqlite = []
swagger-ui = ["utoipa-swagger-ui"]  # Swagger UI documentation (enabled by default for development)
