[package]
name = "netsrv"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@voltageenergy.com>"]
description = "Network service for data transmission from Redis to various protocols"


[dependencies]
# Core dependencies
tokio = { version = "1.24.2", features = ["full"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
clap = { version = "4.1.8", features = ["derive"] }
config = "0.13.1"
thiserror = "1.0.38"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4.23"
async-trait = "0.1.64"
futures = "0.3.26"

# Redis dependencies
redis = { version = "0.22.1", features = ["tokio-comp"] }

# MQTT dependencies
rumqttc = "0.20.0"

# HTTP dependencies
reqwest = { version = "0.11.14", features = ["json"] }

# Cloud IoT authentication dependencies
hmac = "0.12.1"
sha2 = "0.10.6"
base64 = "0.21.0"
hex = "0.4.3"

# Utility dependencies
uuid = { version = "1.3.0", features = ["v4"] }

# AWS IoT Core dependencies (optional)
aws-sdk-iotdataplane = { version = "0.24.0", optional = true }
aws-config = { version = "0.54.1", optional = true }
aws-types = { version = "0.54.1", optional = true }

# Optional cloud platform support
[features]
default = []
aws-iot = ["aws-sdk-iotdataplane", "aws-config", "aws-types"]

[dev-dependencies]
tempfile = "3"
