[package]
name = "netsrv"
version = "0.0.1"
edition = "2021"
authors = ["Your Name <your.email@voltageenergy.com>"]
description = "Network service for data transmission from Redis to various protocols"


[dependencies]
# Core dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4.1.8", features = ["derive"] }
config = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Internal dependencies
voltage-libs = { path = "../../libs", features = ["redis"] }

# MQTT dependencies
rumqttc = "0.20.0"

# HTTP dependencies
reqwest = { workspace = true }

# Cloud IoT authentication dependencies
hmac = "0.12.1"
sha2 = "0.10.6"
base64 = "0.21.0"
hex = "0.4.3"

# Utility dependencies
uuid = { workspace = true }
url = "2.3"

# Configuration framework
serde_yaml = { workspace = true }
anyhow = { workspace = true }
figment = { workspace = true }

# Web server for configuration management
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }

# AWS IoT Core dependencies (optional)
aws-sdk-iotdataplane = { version = "0.24.0", optional = true }
aws-config = { version = "0.54.1", optional = true }
aws-types = { version = "0.54.1", optional = true }

# Optional cloud platform support
[features]
default = []
aws-iot = ["aws-sdk-iotdataplane", "aws-config", "aws-types"]

[dev-dependencies]
tempfile = { workspace = true }
