[package]
name = "rulesrv"
version = "0.0.1"
edition = "2021"
authors = ["VoltageEMS Team <team@voltageenergy.com>"]
description = "Rule execution service for VoltageEMS"

[[bin]]
name = "rulesrv"
path = "src/main.rs"


[dependencies]
# Local dependencies
voltage-libs = { path = "../../libs", features = ["redis"] }

# Core dependencies
redis = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4.0", features = ["derive"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }

[features]
default = []

# Test configuration
[[test]]
name = "unit_tests"
path = "tests/unit/mod.rs"

[[test]]
name = "integration_tests"
path = "tests/integration/mod.rs"
