[package]
name = "rulesrv"
version = "0.0.1"
edition = "2021"
authors = ["VoltageEMS Team <team@voltageenergy.com>"]
description = "Rule execution service for VoltageEMS"

[lib]
name = "rulesrv"
path = "src/lib.rs"

[[bin]]
name = "rulesrv"
path = "src/main.rs"

[dependencies]
# Local dependencies
common = { path = "../../libs/common", default-features = false, features = ["redis", "sqlite"] }
voltage-config = { path = "../../libs/voltage-config", features = ["axum-support"] }
voltage-rtdb = { path = "../../libs/voltage-rtdb" }
voltage-routing = { path = "../../libs/voltage-routing" }

# Core dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
axum = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true, optional = true }
tokio-util = { workspace = true }
bytes = { workspace = true }

# SQLite
sqlx = { workspace = true }

# Additional dependencies for rule engine
regex = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }

[features]
default = ["swagger-ui"]
swagger-ui = ["utoipa-swagger-ui"]  # Swagger UI documentation (enabled by default for development)

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
tower = { workspace = true }
http-body-util = "0.1"
